# GP_3

./: .gitignore  Makefile  README.md  meson.build
include/: Camera.h  IndexBuffer.h  Renderer.h  Shader.h  VertexBuffer.h
src/: Camera.cpp  IndexBuffer.cpp  Shader.cpp  VertexBuffer.cpp  main.cpp
src/res/shaders/: fragment.shader  vertex.shader
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/glfw-3.4/: .meson-subproject-wrap-hash.txt
